--- a/frontend/mysite/templates/registration/registration_complete.html
+++ b/frontend/mysite/templates/registration/registration_complete.html
@@ -1,6 +1,15 @@
-{% extends "polls/base.html" %}
-{% load i18n %}
+{% extends "base.html" %}
+
+{% block title %}Registration complete{% endblock %}
 
 {% block content %}
-    <p>{% trans "You are now registered. Activation email sent." %}</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <h1>Registration complete!</h1>
+
+                <p>An activation email has been sent.</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
