--- a/frontend/mysite/templates/registration/registration_form.html
+++ b/frontend/mysite/templates/registration/registration_form.html
@@ -1,11 +1,31 @@
-{% extends "polls/base.html" %}
-{% load i18n %}
+{% extends "base.html" %}
+{% load bootstrap3 %}
+
+{% block title %}Registration{% endblock %}
 
 {% block content %}
-  <form method="post" action=".">
-    {% csrf_token %}
-    {{ form.as_p }}
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-offset-2 col-sm-10">
+                <h1>Sign up</h1>
+                <p>Already registered?
+                    <a href="{% url 'auth_login' %}">Sign in here.</a></p>
+            </div>
+        </div>
 
-    <input type="submit" value="{% trans 'Submit' %}"/>
-  </form>
+        <form action="{% url 'registration_register' %}"
+              method="post" role="form" class="form-horizontal">
+            {% csrf_token %}
+            {% bootstrap_form form layout='horizontal' %}
+
+            {% buttons %}
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-primary">
+                        {% bootstrap_icon "star" %} Sign Me Up!
+                    </button>
+                </div>
+            {% endbuttons %}
+        </form>
+
+    </div>
 {% endblock %}
