--- a/frontend/mysite/polls/templates/polls/home.html
+++ b/frontend/mysite/polls/templates/polls/home.html
@@ -12,16 +12,10 @@
             </li>
         </ul>
     {% else %}
-        <form class="navbar-form navbar-right"
-              method="post"
-              action="{% url 'auth_login' %}">
-            {% csrf_token %}
-            {% for field in form %}
-                {% bootstrap_field field %}
-            {% endfor %}
-            <input type="hidden" name="next" value="{% url 'polls:home' %}"/>
-            <button type="submit" class="btn btn-success">Sign in</button>
-        </form>
+        <p>
+            <a class="navbar-form navbar-right btn btn-success"
+               href="{% url 'auth_login' %}">Sign in</a>
+        </p>
     {% endif %}
 {% endblock %}
 {% block content %}
