sign button fix 2

--- a/frontend/mysite/polls/templates/polls/home.html
+++ b/frontend/mysite/polls/templates/polls/home.html
@@ -12,8 +12,8 @@
             </li>
         </ul>
     {% else %}
-        <p>
-            <a class="navbar-form navbar-right btn btn-success"
+        <p class="navbar-form navbar-right">
+            <a class=" btn btn-success"
                href="{% url 'auth_login' %}">Sign in</a>
         </p>
     {% endif %}
