small text changes

--- a/frontend/mysite/polls/static/polls/css/custom.css
+++ b/frontend/mysite/polls/static/polls/css/custom.css
@@ -23,3 +23,7 @@ html, body {
     background-color: rgb(238, 238, 238);
     text-shadow: rgb(217, 217, 217) 1px 1px 0px
 }
+
+li a {
+    color: green;
+}
