--- a/frontend/mysite/polls/templates/polls/index.html
+++ b/frontend/mysite/polls/templates/polls/index.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'polls/css/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'polls/css/custom.css' %}">
 
 {% if latest_question_list %}
     <ul>
