--- a/frontend/mysite/polls/templates/base.html
+++ b/frontend/mysite/polls/templates/base.html
@@ -21,7 +21,6 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'polls:home' %}">DEMO</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -53,7 +52,7 @@
     <div class="container">
         <footer>
             <hr/>
-            <p>django-registration demo using Bootstrap 3</p>
+            <p>movie recommender system</p>
         </footer>
     </div>
 </div>
