add star ratings widget + small refactorings

--- a/frontend/mysite/polls/templates/polls/index.html
+++ b/frontend/mysite/polls/templates/polls/index.html
@@ -1,6 +1,8 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'polls/css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
+<script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
 
 {% if latest_question_list %}
     <ul>
