--- a/frontend/mysite/polls/templates/base.html
+++ b/frontend/mysite/polls/templates/base.html
@@ -9,6 +9,7 @@
     <title>{% block title %}{% endblock %}</title>
     {% bootstrap_css %}
     <link href="{% static "polls/css/custom.css" %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
 </head>
 
 <body>
@@ -21,10 +22,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="{% url 'polls:home' %}">Recommend</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class=""><a href="{% url 'polls:home' %}">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -57,6 +58,7 @@
     </div>
 </div>
 
+<script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.js' %}"></script>
 {% bootstrap_javascript jquery=True %}
 </body>
 </html>
