--- a/frontend/mysite/polls/templates/polls/detail.html
+++ b/frontend/mysite/polls/templates/polls/detail.html
@@ -1,12 +1,15 @@
-<h1>{{ question.question_text }}</h1>
+{% extends 'base.html' %}
+{% load ratings %}
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+{% block content %}
+    <h1>{{ question.question_text }}</h1>
 
-<form action="{% url 'polls:vote' question.id %}" method="post">
-{% csrf_token %}
-{% for choice in question.choice_set.all %}
-    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
-{% endfor %}
-<input type="submit" value="Vote">
-</form>
+    <form action="{% url 'polls:vote' question.id %}" method="post">
+        {% csrf_token %}
+        {% ratings question %}
+        <input type="submit" value="Vote">
+    </form>
+{% endblock content %}
+
+
+
