--- a/frontend/mysite/polls/static/polls/css/custom.css
+++ b/frontend/mysite/polls/static/polls/css/custom.css
@@ -7,7 +7,9 @@ html, body {
     height: auto !important;
     height: 100%;
     margin: 0 auto -100px; /* the bottom margin is the negative value of the footer's height */
+
 }
+
 
 .wrapper:after {
     content: "";
@@ -22,6 +24,10 @@ html, body {
     border-top: 2px solid rgb(218, 218, 218);
     background-color: rgb(238, 238, 238);
     text-shadow: rgb(217, 217, 217) 1px 1px 0px
+}
+
+.filmDetail {
+    margin: 0 0 0 50px;
 }
 
 li a {
