--- a/frontend/mysite/polls/templates/polls/detail.html
+++ b/frontend/mysite/polls/templates/polls/detail.html
@@ -1,14 +1,17 @@
 {% extends 'base.html' %}
+{% load bootstrap3 %}
 {% load ratings %}
 
 {% block content %}
-    <h1>{{ film.Title }}</h1>
-
-    <form action="{% url 'polls:vote' film.id %}" method="post">
-        {% csrf_token %}
-        {% ratings film %}
-        <input type="submit" value="Vote">
-    </form>
+    <div class="filmDetail">
+        <h1>{{ film.Title }}</h1>
+        <img src={{ film.Poster }} class="img-responsive" alt="Responsive image">
+        <form action="{% url 'polls:vote' film.id %}" method="post">
+            {% csrf_token %}
+            {% ratings film %}
+            <input type="submit" value="Vote">
+        </form>
+    </div>
 {% endblock content %}
 
 
