--- a/frontend/mysite/polls/templates/polls/detail.html
+++ b/frontend/mysite/polls/templates/polls/detail.html
@@ -3,8 +3,8 @@
 {% load ratings %}
 
 {% block content %}
-    <div class="filmDetail">
-        <h1>{{ film.Title }}</h1>
+    <div class="container">
+        <h2>{{ film.Title }}</h2>
         <img src={{ film.Poster }} class="img-responsive" alt="Responsive image">
         <form action="{% url 'polls:vote' film.id %}" method="post">
             {% csrf_token %}
