some visual effects

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="container">
-        <h2>{{ film.Title }}</h2>
+        <h2>{{ film.Title }} ({{ film.Year }})</h2>
         <table>
             <tr>
                 <td>
