--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -1,5 +1,7 @@
 {% load static from staticfiles %}
 {% load bootstrap3 %}
+{% load fontawesome %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +10,7 @@
 
     <title>{% block title %}{% endblock %}</title>
     {% bootstrap_css %}
+    {% fontawesome_stylesheet %}
     <link href="{% static "polls/css/custom.css" %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
 </head>
@@ -22,12 +25,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'polls:home' %}">Recommend</a>
+                <a class="navbar-brand" href="{% url 'polls:home' %}">Films</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="{% url 'polls:contact' %}">Contact</a></li>
                 </ul>
                 {% block nav_user %}
                     {% if user.is_authenticated %}
@@ -53,7 +55,7 @@
     <div class="container">
         <footer>
             <hr/>
-            <p>movie recommender system</p>
+            <p>Movie recommender system</p>
         </footer>
     </div>
 </div>
