--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,15 +1,21 @@
+{% extends "base.html" %}
+{% load admin_urls %}
+{% load bootstrap3 %}
+
 {% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'polls/css/custom.css' %}">
-<link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
-<script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
+{% block content %}
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/css/custom.css' %}">
+    <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
+    <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
 
-{% if latest_films_list %}
-    <ul>
-        {% for film in latest_films_list %}
-            <li><a href="{% url 'polls:detail' film.id %}">{{ film.Title }}</a></li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+    {% if latest_films_list %}
+        <ul>
+            {% for film in latest_films_list %}
+                <li><a href="{% url 'polls:detail' film.id %}">{{ film.Title }} ( {{ film.Year }} )</a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No films are available.</p>
+    {% endif %}
+{% endblock %}
