--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -29,6 +29,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a href="{% url 'polls:top' %}">Recommendations</a></li>
                     <li><a href="{% url 'polls:contact' %}">Contact</a></li>
                 </ul>
                 {% block nav_user %}
