visial fixes: contact, top, etc

--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -25,11 +25,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'polls:home' %}">Films</a>
+                <ul class="nav navbar-nav">
+                    <li><a class="nav navbar-nav" href="{% url 'polls:home' %}">Films</a></li>
+                    <li><a class="nav navbar-nav" href="{% url 'polls:top' %}">Recommendations</a></li>
+                </ul>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'polls:top' %}">Recommendations</a></li>
                     <li><a href="{% url 'polls:contact' %}">Contact</a></li>
                 </ul>
                 {% block nav_user %}
