--- a/polls/templates/polls/contact.html
+++ b/polls/templates/polls/contact.html
@@ -5,7 +5,7 @@
 {% block title %}Contact{% endblock %}
 {% block content %}
     <div class="container">
-        <p>If you have an issue, please report it on
+        <p>If you have an issue, please, report it on
             <a href="https://github.com/lyapizz/recommend-py" class="btn"><i class="fa fa-github left"></i> Github</a>
         </p>
     </div>
