--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -25,10 +25,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <ul class="nav navbar-nav">
-                    <li><a class="nav navbar-nav" href="{% url 'polls:home' %}">Films</a></li>
-                    <li><a class="nav navbar-nav" href="{% url 'polls:top' %}">Recommendations</a></li>
-                </ul>
+                <a class="navbar-brand" href="{% url 'polls:home' %}">Films</a>
+                <a class="navbar-brand" href="{% url 'polls:top' %}">Recommendations</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
