table with margin

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="container">
         <h2>{{ film.Title }} ({{ film.Year }})</h2>
-        <table>
+        <table class="margin-table">
             <tr>
                 <td>
                     <ul class="pager">
