experiments with height: js script for set height

--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -63,5 +63,16 @@
 
 <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.js' %}"></script>
 {% bootstrap_javascript jquery=True %}
+<script type="text/javascript">
+    function resetHeight() {
+        // reset the body height to that of the inner browser
+        document.body.style.height = window.innerHeight + "px";
+    }
+
+    // reset the height whenever the window's resized
+    window.addEventListener("resize", resetHeight);
+    // called to initially set the height.
+    resetHeight();
+</script>
 </body>
 </html>
