--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -20,7 +20,7 @@
                 </td>
                 <td>
                     <img src={{ film.Poster }} class="img-responsive" alt="Responsive image"
-                         style="max-width: 256px">
+                         style="max-height: 350px">
                 </td>
                 <td>
                     <ul class="pager">
