--- a/polls/static/polls/css/custom.css
+++ b/polls/static/polls/css/custom.css
@@ -38,3 +38,11 @@ li a {
 .margin-table {
     margin-bottom: 15px
 }
+
+.navbar {
+    margin-bottom: unset
+}
+
+.h3, h3 {
+    text-align: center;
+}
