--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="container">
         <h3>{{ film.Title }} ({{ film.Year }})</h3>
-        <table class="margin-table">
+        <table class="margin-table" cellpadding="7">
             <tr>
                 <td>
                     <ul class="pager">
