settings for ml is enabled outside small css stuff

--- a/polls/static/polls/css/custom.css
+++ b/polls/static/polls/css/custom.css
@@ -55,7 +55,6 @@ li a {
     margin-right: auto;
 }
 
-.center-container, center-container {
-    display: flex;
-    justify-content: center;
+.left-aligned {
+    text-align: left;
 }
