--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -54,7 +54,7 @@
 
 <div id="page-footer">
     <div class="container">
-        <footer>
+        <footer style="text-align: left">
             <hr/>
             <p>Movie recommender system</p>
         </footer>
