--- a/polls/templates/polls/top.html
+++ b/polls/templates/polls/top.html
@@ -3,12 +3,10 @@
 {% load bootstrap3 %}
 
 {% block content %}
-    <h3>Top Recommendations for you:</h3>
-    <div class="center-container">
-        <ul>
-            {% for recommendation in recommendations %}
-                <li>{{ recommendation }}</li>
-            {% endfor %}
-        </ul>
-    </div>
+    <h3 style="text-align: left">Top Recommendations for you:</h3>
+    <ul>
+        {% for recommendation in recommendations %}
+            <li>{{ recommendation }}</li>
+        {% endfor %}
+    </ul>
 {% endblock %}
