facebook login + cosmetics

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -3,7 +3,7 @@
 {% load myratings %}
 
 {% block content %}
-    <div class="container">
+    <div class="container align-center">
         <h3>{{ film.Title }} ({{ film.Year }})</h3>
         <table>
             <tr>
