--- a/polls/templates/registration/registration_form.html
+++ b/polls/templates/registration/registration_form.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-offset-2 col-sm-10">
+            <div class="col-sm-10">
                 <h1>Sign up</h1>
                 <p>Already registered?
                     <a href="{% url 'auth_login' %}">Sign in here.</a></p>
