--- a/polls/static/polls/css/custom.css
+++ b/polls/static/polls/css/custom.css
@@ -26,6 +26,17 @@ li a {
     color: green;
 }
 
+.social-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.btn a, .btn a:hover {
+    color: white;
+    text-decoration: none;
+}
+
 .container {
     margin-left: unset;
     margin-right: unset;
@@ -39,13 +50,6 @@ li a {
     margin-bottom: unset
 }
 
-.h3, h3,
-.td, td,
-.table, table,
-.container {
-    text-align: center;
-}
-
 .td, td {
     padding: 10px;
 }
@@ -53,8 +57,13 @@ li a {
 .table, table {
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
-.left-aligned {
-    text-align: left;
+.align-center {
+    text-align: center;
+}
+
+.margin-top {
+    margin-top: 15px;
 }
