--- a/polls/templates/polls/top.html
+++ b/polls/templates/polls/top.html
@@ -8,10 +8,7 @@
         {% for recommendation in recommendations %}
             <li>Predicting rating {{ recommendation.0|floatformat:1 }} for
                 <a href="https://www.imdb.com/title/{{ recommendation.1.imdbID }}">{{ recommendation.1.Title }}
-                    ({{ recommendation.1.Year }})</a>
-            </li>
-            <li>
-                <a href="{% url 'polls:detail' recommendation.1.id %}">Already seen?</a>
+                    ({{ recommendation.1.Year }})</a> | <a href="{% url 'polls:detail' recommendation.1.id %}">Rate?</a>
             </li>
         {% endfor %}
     </ul>
