--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -31,6 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'polls:contact' %}">Contact</a></li>
+                    <li><a href="{% url 'polls:about' %}">About</a></li>
                 </ul>
                 {% block nav_user %}
                     {% if user.is_authenticated %}
