--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -42,6 +42,7 @@
             </tr>
         </table>
         {% myratings film %}
+        <div class="summary-text">{{ film.Plot }}</div>
     </div>
 {% endblock content %}
 
