--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -53,14 +53,11 @@
 
 </div> <!-- wrapper -->
 
-<div id="page-footer">
-    <div class="container">
-        <footer style="text-align: left">
-            <hr/>
-            <p>Movie recommender system</p>
-        </footer>
-    </div>
-</div>
+{#<div id="page-footer">#}
+{#    <footer style="text-align: left">#}
+{#        <p>Movie recommender system</p>#}
+{#    </footer>#}
+{#</div>#}
 
 <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.js' %}"></script>
 {% bootstrap_javascript jquery=True %}
