--- a/polls/static/polls/css/custom.css
+++ b/polls/static/polls/css/custom.css
@@ -89,4 +89,20 @@ html, body {
     padding-bottom: 16px;
 }
 
+.swipe {
+    overflow: hidden;
+    visibility: hidden;
+    position: relative;
+}
+
+.swipe-wrap {
+    overflow: hidden;
+    position: relative;
+}
+
+.swipe-wrap > div {
+    float: left;
+    width: 100%;
+    position: relative;
+}
 
