--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -53,17 +53,11 @@
 
 </div> <!-- wrapper -->
 
-{#<div id="page-footer">#}
-{#    <footer style="text-align: left">#}
-{#        <p>Movie recommender system</p>#}
-{#    </footer>#}
-{#</div>#}
-
-<script src="https://hammerjs.github.io/dist/hammer.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/swipe/2.0/swipe.min.js"></script>
 
 <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.js' %}"></script>
 <script type="text/javascript" src="{% static 'polls/js/src/window-resize.js' %}"></script>
-<script type="text/javascript" src="{% static 'polls/js/src/swipe.js' %}"></script>
+<script type="text/javascript" src="{% static 'polls/js/src/swipe-vanilla.js' %}"></script>
 
 {% bootstrap_javascript jquery=True %}
 </body>
