fixed sizes for img

--- a/polls/static/polls/css/custom.css
+++ b/polls/static/polls/css/custom.css
@@ -106,3 +106,9 @@ html, body {
     position: relative;
 }
 
+img {
+    float: left;
+    width: 231px;
+    height: 330px;
+    background-size: cover;
+}
