--- a/polls/templates/polls/filmContent.html
+++ b/polls/templates/polls/filmContent.html
@@ -16,8 +16,7 @@
                     </ul>
                 </td>
                 <td>
-                    <img src={{ film.Poster }} class="img-responsive" alt="Responsive image"
-                         style="max-height: 350px">
+                    <img src={{ film.Poster }}>
                 </td>
                 <td>
                     <ul class="pager">
